--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "d3": "^7.9.0",
     "echarts": "^5.5.1",
     "echarts-for-react": "^3.0.2",
+    "highcharts": "^11.4.6",
+    "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
