--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "highcharts-react-official": "^3.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "react-swipeable": "^7.0.1",
     "swiper": "^11.1.5",
